Expose Location header.